# SmartHomeSystem

./: .gitignore  CMakeLists.txt  Device.cpp  Device.h  DoorLock.cpp  DoorLock.h  ElectricalDevice.cpp  ElectricalDevice.h  Light.cpp  Light.h  Room.cpp  Room.h  SecurityCamera.cpp  SecurityCamera.h  SmartHomeSystem.cpp  SmartHomeSystem.h  Thermostat.cpp  Thermostat.h  defaults.txt  main.cpp  tastatura.txt
